Revision config et fichiers sass

--- a/_integration/sass/_global.scss
+++ b/_integration/sass/_global.scss
@@ -1,4 +1,4 @@
-//***
+//=========================
 // _global.scss
-// Définition de tous les éléments globaux du site (boutons, contenus etc.)
-//***
+// Définition des éléments présents et répété sur tout le site (boutons, contenus etc.)
+//=========================
