--- a/_integration/sass/_variables.scss
+++ b/_integration/sass/_variables.scss
@@ -6,6 +6,10 @@
 //=========================
 //  COLORS
 //=========================
+$textColor: #000;
+$orangeColor: #ff5500;
+$grisClairColor: #dbdbdb;
+$grisFonceColor: #2d2d2c;
 
 //=========================
 //  FONT SIZES
