--- a/_integration/sass/main.scss
+++ b/_integration/sass/main.scss
@@ -16,29 +16,8 @@
 @import "global";
 
 $icons-sprite-dimensions: true;
-@import "icons/*.png";
-@include all-icons-sprites;
+@import "icons/sprites/*.png";
+@include all-sprites-sprites;
 
-#home{
-    .content{
-        position: relative;
-        width: 100%; 
-        height: 500px;
-    }
-    .content::after {
-      content: "";
-      background: url("../img/trame_actu_desktop.png");
-      background-color: #ececec;
-      background-repeat: repeat-x;
-      background-position: 0 50px;
-      opacity: 0.2;
-      width: 100%;
-      height: 500px;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;   
-    }
-}
+
+
